syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message blank {}

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float final_price = 4;
}

message ListOrderByIdRequest {
  string id = 1;
}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message OrdersList {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrderById(ListOrderByIdRequest) returns (Order);
  rpc ListOrders(blank) returns (OrdersList);
}